@@ -7,6 +7,7 @@ ParamHelpers_1.5:
 - added property 'tunable' to make*Param
 - isFeasible supports named lists for unordered checks
 - filterParams can now filter based on 'ids' and 'tunable'
+- numeric and numericvector Params and LearnerParams have a new arg 'allow.inf'
 - new functions
 -- isRequiresOk
 -- plotEAF
